# era5

./: CHANGELOG.md  Makefile  README.md  docker_env  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: installation_and_basic_usage.ipynb
examples/: analysis.json  era5-pds.json  era5.json  forecast.json
scripts/: lint
src/azure/: Dockerfile  README.md  etl.py  job.yaml
src/stactools/era5/: __init__.py  commands.py  constants.py  run_azure.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
