[metadata]
name = stactools-era5
version = attr: stactools.era5.__version__
description = stactools package for ERA5 data from the ECMWF.
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/era5
project_urls =
    Documentation = https://stactools-era5.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/era5/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    ERA5
    weather
    reanalysis
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.2.6
    xstac@git+https://github.com/TomAugspurger/xstac
    fsspec[http]
    # azure
    azure-storage-blob
    adlfs
    planetary-computer

[options.packages.find]
where = src


[options.extras_require]
test =
    pytest
    planetary_computer